# or1kmvp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: asan.yml  cmake.yml  lint.yml  style.yml
cmake/: FindLibELF.cmake  FindOR1KISS.cmake  FindVCML.cmake
config/: smp2.cfg  smp4.cfg  up.cfg
include/or1kmvp/: openrisc.h
src/: main.cpp
src/or1kmvp/: common.h  config.h  openrisc.cpp  openrisc.h  system.cpp  system.h  version.h.in
sw/: buildroot.config  linux.config  or1kmvp-smp2.dtb  or1kmvp-smp2.dts  or1kmvp-smp4.dtb  or1kmvp-smp4.dts  or1kmvp-up.dtb  or1kmvp-up.dts
test/: CMakeLists.txt  linux_boot.py.in
test/sanitizer/: asan.cfg  lsan.cfg  tsan.cfg  ubsan.cfg
utils/: CMakeLists.txt  format  gdbterm  setup
